<resources>
    <string name="app_name">CracowSightseeing</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_main_activity">Main Activity</string>
    <string name="title_menu">Menu</string>
    <string name="title_beacon">Add quiz</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_leader_board">Leader Board</string>
    <string name="title_register">Register</string>
    <string name="button">Send</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="map">MAP</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="quiz">QUIZ</string>
    <string name="leader_board">LEADER BOARD</string>
    <string name="loguot">LOGUOT</string>
    <string name="level">level</string>
    <string name="exp">exp</string>
    <string name="nick">nick</string>
    <string name="question">TextView</string>
    <string name="ans4">4</string>
    <string name="ans3">3</string>
    <string name="ans2">2</string>
    <string name="ans1">1</string>
</resources>
