<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ans1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ans2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans2"
        android:layout_above="@+id/ans1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ans3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans3"
        android:layout_above="@+id/ans2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ans4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans4"
        android:layout_above="@+id/ans3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/question" />
</RelativeLayout>