<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/mapBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_above="@+id/beacon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        android:layout_above="@+id/quiz"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:layout_above="@+id/leaderboard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leader_board"
        android:layout_above="@+id/logout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loguot"
        android:layout_marginBottom="51dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>